--- a/hack/docker-compose.yaml
+++ b/hack/docker-compose.yaml
@@ -3,6 +3,7 @@ services:
   mysql:
     image: r.qihoo.cloud/library/mysql:5.6.36
     container_name: ${DEV_USER}-mysql
+    command: --character-set-server=utf8mb4
     environment:
       MYSQL_DATABASE: "indole"
       MYSQL_ROOT_PASSWORD: "a1b2c3d4e"
